--- a/index.html
+++ b/index.html
@@ -13,30 +13,26 @@
     <link href="https://fonts.googleapis.com/css2?family=Karla&family=Quicksand:wght@300&family=Sacramento&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./style.css">
   </head>
-  <body>
+  <body id="index">
     <nav>
         <ul>
             <li>
-                <a href="index.html" class="act">ABOUT</a>
+                <a href="index.html" class="nav-link-wrapper active-nav-link">ABOUT</a>
             </li>
             <li>
-                <a href="#">PORTFOLIO</a> <!-- DROP DOWN ART & DATA-->
+                <a href="artprojects.html" class="nav-link-wrapper">ART ADMIN</a> <!-- DROP DOWN ART & DATA-->
             </li>
             <li>
-                <a href="#">RESUME</a>
-            </li>
-            <li>
-                <a href="#">CONTACT</a>
+                <a href="data.html" class="nav-link-wrapper">DATA VIZ</a>
             </li>
         </ul>
     </nav>
     <section id="about">
         <div class="text">
-            <h3>Alli Arnold</h3>
-            <h4>Brooklyn, NY</h4>
-            <p>ok</p>
+            <p><b>Alli Arnold</b> (she/her) is a Brooklyn based arts worker and MS candidate in the Grad Center at CUNY’s Data Analysis & Visualization program. Her arts administration experience ranges from managing public art projects, to exhibition production, collection management, public programming, to producing fine print editions and auctions.<br><br>Alli holds a BA in Art History and French from Loyola University Chicago and a MA in the Connoisseurship of Fine & Decorative Art from the University of Manchester's Sotheby's Institute of Art program. She has worked in various programming and curatorial capacities at cultural institutions around New York City including <b>A.I.R. Gallery</b>, the <b>Brooklyn Academy of Music</b>, and the <b>MTA’s Arts & Design</b> team.<br><br>As a data specialist, Alli has overseen the design and build out of several custom art collection management databases, researched climate solutions, and created engaging visuals on topics ranging from astrology and aquaculture.<br><br>In her free time, Alli can be found reading a good cozy mystery, looking up tree facts, and searching for the perfect cookie recipe.</p>
+            <h4>Contact</h4>
+            <p>azarnold (at) gmail (dot) com</p>
         </div>
     </section>
-    <script src="./main.js" type="module"></script>
   </body>
 </html>
