minor text edits

--- a/artprojects.html
+++ b/artprojects.html
@@ -33,7 +33,7 @@
           <p>Curatorial projects</p>
           <ul>
             <li>"Styling Perspectives" featuring Karina Aguilera Skvirsky and Juan Manuel Echavarria at the BAM Howard Gilman Opera House, May - August, 2019 for the Brooklyn Academy of Music</li>
-            <li>Cupid Ojala, <i>Love Prescriptions</i>, 2019</li>
+            <li>Cupid Ojala, <i>Love Prescriptions</i>, 2019 for the 2019 BAM Gala</li>
             <li>Farah Al Qasimi, <i>Self-Portrait in Red</i>, 2016 for the 2019 Winter Season Cover Art program at the Brooklyn Academy of Music</li>
             <li>Letha Wilson, <i>Steel Face Concrete Bend (Napali Coast Flower Hand)</i>, 2017 for the 2018 Winter Season Cover Art program at the Brooklyn Academy of Music</li>
             <li>Nobutaka Aozaki, <i>Smiley Bag Portraits</i>, 2018 for the 2018 BAM Gala</li>
