--- a/artprojects.html
+++ b/artprojects.html
@@ -40,10 +40,11 @@
           </ul>
           <p>Project management and exhibition production</p>
           <ul>
-            <li>Darryl Westly, <i>Illuminations</i>, 2022 at Long Island Rail Road Westbury Station for the MTA</li>
-            <li>Jeremy Dennis, <i>Stories</i>, 2023 at Atlantic Av-Barclays Ctr for the MTA</li>
-            <li>Teresita Fernandez, <i>Paradise Parados</i>, 2021 at the BAM Strong for the Brooklyn Academy of Music</li>
-            <li>Leo Villareal, <i>Light Matrix</i>, 2021 at the BAM Fisher for the Brooklyn Academy of Music</i></li>
+              <li>David Rios Ferreira, <i>Landscapes adrift-cosmically woven and earthly bonded</i>, 2023 at New York City Transit 7 Av Subway Station for the MTA</li>
+              <li>Jeremy Dennis, <i>Stories</i> series, 2023 at Atlantic Av-Barclays Ctr for the MTA</li>
+              <li>Darryl Westly, <i>Illuminations</i>, 2022 at Long Island Rail Road Westbury Station for the MTA</li>
+              <li>Teresita Fernandez, <i>Paradise Parados</i>, 2021 at the BAM Strong for the Brooklyn Academy of Music</li>
+              <li>Leo Villareal, <i>Light Matrix</i>, 2021 at the BAM Fisher for the Brooklyn Academy of Music</i></li>
           </ul>
           <p>Fundraiser editions and auctions</p>
           <ul>
